2018-07-06  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSString.m: Remove GSString copyWithZone:.
	* Source/NSString.m: Raise exception when no is provided for the
	string. This brings our implementation closer to the Cocoa one.
	* Source/GSString.m: Add similar exceptions.

2018-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/base/NSString/test00.m: : Move _unicodeString from here...
	* Source/GSString.m: ... to here.
	In order to reliably test the internal 16bit unicode implementation
	we must have a method guaranteed to produce an instance of the correct
	class.

2018-07-01  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSString.m: Small cleanup for printf registration.
	* Tests/base/NSString/test00.m: Add David Chisnall's test from
	newapi branch slightly reformatted.
	* Source/GSString.m: Remove code that was identical to super class.
	* Source/GSString.m: Move the method _unicodeString from here...
	* Tests/base/NSString/test00.m: ...to here.

2018-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: Fix conversion of numeric entities with large
	values into UTF-16 surrogate pairs before returning them as string.

2018-06-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc:
	* Source/GSPrivate.h:
	* Source/NSException.m:
	* Source/NSUserDefaults.m:
	Add boolean GSExceptionStackTrace user default to turn on inclusion
	of stack trace information in the -description of an exception
	(like the GNUSTEP_STACK_TRACE environment variable). Useful for
	diagnostic logs of a long running server process.

2018-04-30  Graham Lee  <graham@iamleeg.com>

	* Source/NSCalendar.m (calendarWithIdentifier:):
	New convenience method implemented by Cocoa.

2018-05-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: avoid static initialisation macro for allocation
	locks in case some systems implement it in a way that doesn't work
	after static initialisation takes place.

2018-05-27  Fred Kiefer <fredkiefer@gmx.de>
