@@ -1,3 +1,8 @@
+2018-07-07  Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/NSString.m: Add primitive implementation for
+	rangeOfComposedCharacterSequencesForRange:.
+
 2018-07-06  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Source/GSString.m: Remove GSString copyWithZone:.
